--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,9 @@ android {
 }
 
 dependencies {
+    //compileOnly 'io.github.libxposed:api:100'
     compileOnly 'de.robv.android.xposed:api:82'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
 }
