--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,17 @@
 	package="com.doctor3.learnindorm">
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 	<application android:allowBackup="true" android:dataExtractionRules="@xml/data_extraction_rules"
 		android:fullBackupContent="@xml/backup_rules" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true"
 		android:requestLegacyExternalStorage="true"
 		android:theme="@style/Theme.LearnInDorm"
 		tools:targetApi="31">
+		<provider
+			android:name=".LocationConfigProvider"
+			android:authorities="com.doctor3.learnindorm.lcprovider"
+			android:exported="true" />
 
 		<activity android:name=".MainActivity" android:exported="true">
 			<intent-filter>
