--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,9 @@ pluginManagement {
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+
     repositories {
+        mavenLocal()
         google()
         mavenCentral()
         maven { url 'https://api.xposed.info/' }
